<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingVertical="10dp">
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginVertical="10dp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_vertical">
                        <ImageView
                            android:layout_width="23dp"
                            android:layout_height="23dp"
                            android:src="@drawable/usdt"
                            android:textColor="@color/textCommon"
                            android:layout_marginHorizontal="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Eth"
                            android:textColor="@color/textCommon"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/textEmphasize"
                        android:id="@+id/eth_usdt"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingVertical="10dp">
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginVertical="10dp">
                        <ImageView
                            android:layout_width="23dp"
                            android:layout_height="23dp"
                            android:src="@drawable/btccc"
                            android:layout_marginHorizontal="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Btc"
                            android:textColor="@color/textCommon"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginStart="10dp"

                        android:textColor="@color/textEmphasize"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/eth_btc"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eth_supply"
                    android:textStyle="bold"
                    android:layout_marginVertical="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textEmphasize"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"
                    android:id="@+id/ethNumber"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eth2staking"
                    android:textStyle="bold"
                    android:layout_marginVertical="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textEmphasize"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"
                    android:id="@+id/eth2staking"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/burntfees"
                    android:textStyle="bold"
                    android:layout_marginVertical="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textEmphasize"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"
                    android:id="@+id/BurntFees" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingVertical="10dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:padding="3dp"
                            android:src="@drawable/shujuku"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chain_size"
                            android:textColor="@color/textCommon"
                            android:textSize="18sp"
                            android:layout_marginStart="5dp"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textEmphasize"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:id="@+id/chain_size"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:paddingVertical="10dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/block"
                            android:scaleType="fitXY"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/block_Number"
                            android:textColor="@color/textCommon"
                            android:textSize="18sp"
                            android:layout_marginStart="5dp"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textEmphasize"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:id="@+id/blockNumber"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>



            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_margin="10dp"
                android:paddingVertical="10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/node"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_nodes_count"
                        android:textColor="@color/textCommon"
                        android:textSize="18sp"
                        android:layout_marginStart="5dp"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textEmphasize"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:id="@+id/nodesNumber"
                    android:layout_marginTop="10dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/refreshButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_Update"
                android:textSize="18sp"
                android:textStyle="italic"
                android:textColor="@color/textCommon"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/refresh"
                android:id="@+id/refreshImg"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/none"
            android:id="@+id/requestTime"
            android:textSize="13sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/textCommon"/>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>