<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:background="@color/background">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/scrollView"
            android:visibility="gone">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="10dp"
                            app:cardBackgroundColor="@color/views"
                            android:id="@+id/TransactionCard"
                            android:layout_margin="7dp">
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:orientation="vertical">
                                        <LinearLayout
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:orientation="horizontal"
                                            android:gravity="center_vertical">
                                                <ImageView
                                                    android:layout_width="25dp"
                                                    android:layout_height="25dp"
                                                    android:src="@drawable/send"/>
                                                <TextView
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:textSize="18sp"
                                                    android:text="@string/from"
                                                    android:textStyle="bold"
                                                    android:layout_marginStart="5dp"
                                                    android:textColor="@color/textCommon"/>
                                        </LinearLayout>
                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:textSize="13sp"
                                            android:layout_marginStart="15dp"
                                            android:layout_marginVertical="5dp"
                                            android:textIsSelectable="true"
                                            android:id="@+id/From"/>
                                        <LinearLayout
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:gravity="center_vertical"
                                            android:orientation="horizontal">
                                                <ImageView
                                                    android:layout_width="25dp"
                                                    android:layout_height="25dp"
                                                    android:src="@drawable/get"/>
                                                <TextView
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:textSize="18sp"
                                                    android:layout_marginStart="5dp"
                                                    android:text="@string/to"
                                                    android:textStyle="bold"
                                                    android:textColor="@color/textCommon"/>
                                        </LinearLayout>

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:textSize="13sp"
                                            android:layout_marginStart="15dp"
                                            android:textIsSelectable="true"
                                            android:layout_marginVertical="5dp"
                                            android:id="@+id/To"/>
                                        <LinearLayout
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:orientation="horizontal"
                                            android:layout_marginEnd="5dp"
                                            android:layout_marginTop="10dp"
                                            android:layout_gravity="end">
                                                <TextView
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:textSize="18sp"
                                                    android:text="@string/value"
                                                    android:textStyle="bold"
                                                    android:textColor="@color/textCommon"/>
                                                <TextView
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:textSize="18sp"
                                                    android:textStyle="bold"
                                                    android:id="@+id/Value"
                                                    android:textColor="@color/textCommon"/>
                                        </LinearLayout>


                                </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>
                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="7dp">
                                <androidx.recyclerview.widget.RecyclerView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/recyclerView"
                                    android:orientation="vertical"
                                    android:scrollbarThumbVertical="@color/title"
                                    android:layout_marginBottom="10dp"/>
                        </com.google.android.material.card.MaterialCardView>
                </LinearLayout>
        </androidx.core.widget.NestedScrollView>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ProgressView"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:id="@+id/failedContent"
            android:visibility="gone">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/shibai"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textCommon"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:text="@string/request_failed"/>
        </LinearLayout>
</FrameLayout>